--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "moment": "^2.29.1",
     "mongodb": "^3.6.2",
     "mongoose": "^5.10.8",
-    "mqtt": "^4.1.0"
+    "mqtt": "^4.1.0",
+    "multer": "^1.4.2"
   }
 }
